--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,11 +17,10 @@
 <!-- box -->
 <div id="wrapper">
   <center><br>
-  <p>Contact information:</p>
+  <p><b>Contact information:</b></p>
 	  <p>you can contact me at ebrodskycomposer[@]gmail[.]com or at 888 888 8888</p>
 	  <p>i am available for music/art commissions, collabs, and silly things :~)</p>
 	  <p><a href="https://soundcloud.com/eliasbrodsky">soundcloud</a></p>
-	  <p><a href="https://soundcloud.com/eliasbrodsky">twitter</a></p>
 	  <br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
    </div>
