--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,8 +18,8 @@
 <div id="wrapper">
   <center><br>
   <p><b>Contact information:</b></p>
-	  <p>you can contact me at ebrodskycomposer[@]gmail[.]com or at 888 888 8888</p>
-	  <p>i am available for music/art commissions, collabs, and silly things :~)</p>
+	  <p>you can contact me at ebrodskycomposer[@]gmail[.]com</p>
+	  <p>i am available for music/art commissions, collabs, and other things :~)</p>
 	  <p><a href="https://soundcloud.com/eliasbrodsky">soundcloud</a></p>
 	  <br>
 		<p><a href="https://eliasbrodsky.github.io/">back</a></p>
