--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></div>
 		  </div>
 		  <div class="side">
-		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></div>
+		  	<div class="cube-image"><a href="https://eliasbrodsky.github.io/pages/contact.html">contact</a></div>
 		  </div>
 		  <div class="side">
 			  <div class="cube-image"><a href="https://eliasbrodsky.github.io/pages/bio.html">bio</a></div>
