--- a/textonly.html
+++ b/textonly.html
@@ -22,7 +22,7 @@
 	<p><a href="https://eliasbrodsky.github.io/pages/bio.html">bio</a></p>
 	<p><a href="https://eliasbrodsky.github.io/pages/works.html">works</a></p>
 	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">scores</a></p>
-	<p><a href="https://eliasbrodsky.github.io/comingsoon.html">contact</a></p>
+	<p><a href="https://eliasbrodsky.github.io/pages/contact.html">contact</a></p>
 		<br><br><br><br><br><br><div id="smallspaces"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br></div>
 		<p><a href="https://eliasbrodsky.github.io/">show me the cube</a></p>
    </div>
